# Lesson_Generator

./: .coveragerc  .gitignore  README.md
.demo_out/iterators_generators_lazy/iterators_generators_lazy/: Makefile  README.md
lesson_generator/: .demo_topics.json  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  PROJECT_SUMMARY.md  README.md  SPRINT_PLAN.md  TDD_STRATEGY.md  changes.txt  mypy.ini  pyproject.toml  requirements.txt
lesson_generator/.github/workflows/: release.yml  tests.yml
lesson_generator/config/: default_topics.json  topic_schema.json
lesson_generator/docs/: AI_PROMPTS.md  DEVELOPER_GUIDE.md  INSTALL.md  PERFORMANCE.md  SECURITY.md  USER_GUIDE.md
lesson_generator/lessons/design_patterns/: Makefile  README.md  errors.txt
lesson_generator/lessons/design_patterns/.github/workflows/: python-tests.yml
lesson_generator/lessons/design_patterns/module_1_design_patterns_intro/: README.md  __init__.py  assignment_a.py  extra_exercises.md  starter_example.py  test_assignment_a.py  test_starter_example.py
lesson_generator/lessons/design_patterns/module_2_design_patterns_application/: README.md  __init__.py  assignment_a.py  assignment_b.py  extra_exercises.md  starter_example.py  test_assignment_a.py  test_assignment_b.py  test_starter_example.py
lesson_generator/lessons/iterators/: .gitignore  Makefile  README.md  errors.txt
lesson_generator/lessons/iterators/module_1_iterator_basics/: README.md  __init__.py  assignment_a.py  extra_exercises.md  starter_example.py  test_assignment_a.py  test_starter_example.py
lesson_generator/lessons/iterators/module_2_custom_iterators/: __init__.py  assignment_a.py  assignment_b.py  extra_exercises.md  starter_example.py  test_assignment_a.py  test_assignment_b.py  test_starter_example.py
lesson_generator/lessons/oops_with_python/: README.md  errors.txt  setup.cfg
lesson_generator/lessons/oops_with_python/module_1_oop_introduction/: README.md  __init__.py  assignment_a.py  extra_exercises.md  starter_example.py  test_assignment_a.py  test_starter_example.py
lesson_generator/lessons/oops_with_python/module_2_advanced_oop_concepts/: README.md  __init__.py  assignment_a.py  assignment_b.py  extra_exercises.md  starter_example.py  test_assignment_a.py  test_assignment_b.py  test_starter_example.py
lesson_generator/scripts/: benchmark_generation.py  openai_smoke.py  smoke_extract_and_generate.py
lesson_generator/src/lesson_generator/: __init__.py
lesson_generator/src/lesson_generator/cli/: __init__.py  main.py
lesson_generator/src/lesson_generator/content/: __init__.py  openai_generator.py
lesson_generator/src/lesson_generator/core/: __init__.py  file_manager.py  generator.py  template_engine.py  template_extractor.py  topic_processor.py
lesson_generator/src/lesson_generator/templates/: assignment.py.j2  extra_exercises.md.j2  github_workflow_python_tests.yml.j2  gitignore.j2  learning_path.md.j2  makefile.j2  readme.md.j2  setup.cfg.j2  starter_example.py.j2  test_assignment_a.py.j2  test_assignment_b.py.j2  test_starter_example.py.j2  test_template.py.j2
lesson_generator/tests/unit/test_cli/: test_command_parser.py  test_difficulty_short_flags.py  test_lessons_option.py
lesson_generator/tests/unit/test_content/: test_cached_content_generator.py  test_fallback_content_generator.py  test_openai_generator.py
lesson_generator/tests/unit/test_core/: test_file_manager.py  test_generator_imports.py  test_generator_integration.py  test_generator_structure_extras.py  test_github_workflow_generation.py  test_syntax_validation.py  test_template_engine.py  test_template_engine_docstring_filter.py  test_topic_processor.py  test_topic_processor_edge_cases.py  test_topic_processor_normalization.py  test_topic_processor_validation.py
v1_gl/oops_with_python/: README.md  errors.txt
v1_gl/oops_with_python/module_1_introduction_to_oop/: extra_exercises.md  learning_path.md  test_starter_example.py
v1_gl/oops_with_python/module_2_advanced_oop_concepts/: __init__.py  extra_exercises.md  learning_path.md  starter_example.py  test_assignment_b.py  test_starter_example.py
v1_gl_retry/oops_with_python/: README.md  errors.txt
v1_gl_retry/oops_with_python/module_1_intro_oop/: __init__.py  extra_exercises.md  learning_path.md  test_starter_example.py
v1_gl_retry/oops_with_python/module_2_advanced_oop/: learning_path.md  starter_example.py
v1_gl_retry2/oops_with_python/: README.md  errors.txt
v1_gl_retry3/oops_with_python/: Makefile  README.md  errors.txt
(+33 files in other folders)
